opam-version: "2.0"
maintainer: "simon@aestheticintegration.com"
authors: "MSR"
homepage: "https://github.com/Z3prover/z3"
bug-reports: "https://github.com/Z3prover/z3/issues"
license: "MIT"
dev-repo: "git+https://github.com/Z3prover/z3.git"
build: [
  [ "python3" "scripts/mk_make.py" "--ml" "--staticlib" ]
  [ make "-C" "build" "-j" jobs ]
]

install: [
  [ "sh" "-c" "ocamlfind install z3 build/api/ml/* build/libz3-static.a"]
  [ "cp" "build/z3" "%{bin}%/z3"]
]

depends: [
  "ocaml"
  "ocamlfind" {build}
  "zarith"
  "conf-gmp"
  "conf-python-3" {build}
]
synopsis: "Z3 solver"
